@@ -19,11 +19,15 @@
 """Editing subtitle data."""
 
 
+from gettext import gettext as _
 from gettext import ngettext
 
+import gtk
+
 from gaupol.base import Delegate
-from gaupol.gtk import util
+from gaupol.gtk import cons, util
 from gaupol.gtk.dialogs import HeaderDialog, InsertDialog, PreferencesDialog
+from gaupol.gtk.index import *
 
 
 class EditAgent(Delegate):
@@ -43,11 +47,62 @@ class EditAgent(Delegate):
 
         self._pref_dialog = None
 
+    def _get_next_cell(self, page, row, col, keyname):
+        """Get adjacent cell to move to with Alt+Arrow."""
+
+        if keyname == 'Up':
+            return max(0, row - 1), col
+        if keyname == 'Down':
+            max_row = len(page.project.times) - 1
+            return min(max_row, row + 1), col
+
+        def get_visible(col):
+            return page.view.get_column(col).get_visible()
+        visible_cols = list(x for x in range(1, 6) if get_visible(x))
+        if keyname == 'Left':
+            cols = list(x for x in visible_cols if x < col)
+            col = (max(cols) if cols else col)
+            return row, col
+        if keyname == 'Right':
+            cols = list(x for x in visible_cols if x > col)
+            col = (min(cols) if cols else col)
+            return row, col
+
+    @util.ignore_exceptions(AssertionError)
+    def _on_editor_key_press_event(self, editor, event, page, row, col):
+        """End editing cell or move between adjacent cells."""
+
+        # pylint: disable-msg=W0612
+        keymap = gtk.gdk.keymap_get_default()
+        keyval, egroup, level, consumed = keymap.translate_keyboard_state(
+            event.hardware_keycode, event.state, event.group)
+        keyname = gtk.gdk.keyval_name(keyval)
+        assert event.state & ~consumed & gtk.gdk.MOD1_MASK
+        assert keyname in ('Up', 'Down', 'Left', 'Right')
+        if col == SHOW:
+            # FIX: SEGFAULT.
+            assert not page.project.needs_resort(row, editor.get_text())
+        row, col = self._get_next_cell(page, row, col, keyname)
+        column = page.view.get_column(col)
+        editor.emit('editing-done')
+        while gtk.events_pending():
+            gtk.main_iteration()
+        page.view.set_cursor(row, column, True)
+
     def _on_pref_dialog_response(self, *args):
         """Destroy the preferences dialog."""
 
         self._pref_dialog.destroy()
         self._pref_dialog = None
+
+    def _set_sensitivities(self, sensitive):
+        """Set menubar and toolbar sensitivities."""
+
+        for group in self.uim.get_action_groups():
+            group.set_sensitive(sensitive)
+        self.uim.get_widget('/ui/menubar').set_sensitive(sensitive)
+        self.uim.get_widget('/ui/main_toolbar').set_sensitive(sensitive)
+        self.video_toolbar.set_sensitive(sensitive)
 
     def _sync_clipboards(self, page):
         """Synchronize all clipboards to match that of page."""
@@ -217,23 +272,42 @@ class EditAgent(Delegate):
 
         self.undo()
 
-    def on_view_renderer_edited(self, *args):
+    util.ignore_exceptions(AssertionError)
+    def on_view_renderer_edited(self, renderer, value, row, col):
         """Finish editing cell."""
 
-        # FIX:
-        pass
+        row = int(row)
+        self._set_sensitivities(True)
+        self.push_message(None)
+        page = self.get_current_page()
+        if col in (SHOW, HIDE, DURN):
+            assert value
+            if page.edit_mode == cons.MODE.FRAME:
+                assert value.isdigit()
+            new_row = page.project.set_position(row, col - 1, value)
+            if new_row != row:
+                page.view.set_focus(new_row, col)
+        elif col in (MTXT, TTXT):
+            page.project.set_text(row, col - 4, value)
 
     def on_view_renderer_editing_canceled(self, *args):
         """Cancel editing cell."""
 
-        # FIX:
-        pass
+        self._set_sensitivities(True)
+        self.push_message(None)
 
-    def on_view_renderer_editing_started(self, *args):
+    def on_view_renderer_editing_started(self, renderer, editor, row, col):
         """Start editing cell."""
 
-        # FIX:
-        pass
+        row = int(row)
+        self._set_sensitivities(False)
+        page = self.get_current_page()
+        message = _('Use Alt+Arrow to move to edit an adjacent cell')
+        if col in (MTXT, TTXT):
+            message = _('Use Shift+Return for line-break')
+        self.push_message(message, False)
+        method = self._on_editor_key_press_event
+        editor.connect('key-press-event', method, page, row, col)
 
     def redo(self, count=1):
         """Redo actions."""
